--- a/client-base/pom.xml
+++ b/client-base/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>milky</artifactId>
         <groupId>com.echobaba</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,7 +18,10 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.echobaba.milky</groupId>
+            <artifactId>common-tool</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
