--- a/domain-support/pom.xml
+++ b/domain-support/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>milky</artifactId>
         <groupId>com.echobaba</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,4 +17,10 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.echobaba.milky</groupId>
+            <artifactId>common-tool</artifactId>
+        </dependency>
+    </dependencies>
 </project>
