--- a/client-base/pom.xml
+++ b/client-base/pom.xml
@@ -19,8 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.echobaba.milky</groupId>
-            <artifactId>common-tool</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
