--- a/domain-support/pom.xml
+++ b/domain-support/pom.xml
@@ -22,5 +22,9 @@
             <groupId>com.echobaba.milky</groupId>
             <artifactId>common-tool</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
