--- a/example/pom.xml
+++ b/example/pom.xml
@@ -17,4 +17,15 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.echobaba.milky</groupId>
+            <artifactId>domain-support</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
