--- a/example/pom.xml
+++ b/example/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.echobaba.milky</groupId>
             <artifactId>domain-support</artifactId>
         </dependency>
