--- a/milky-spring-boot-starter/pom.xml
+++ b/milky-spring-boot-starter/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <artifactId>milky</artifactId>
         <groupId>com.stellariver</groupId>
-        <version>${revision}</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.stellariver.milky</groupId>
-    <artifactId>example</artifactId>
+    <artifactId>milky-spring-boot-starter</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,17 +18,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>com.stellariver.milky</groupId>
+            <artifactId>domain-support</artifactId>
         </dependency>
         <dependency>
             <groupId>com.stellariver</groupId>
-            <artifactId>milky-spring-boot-starter</artifactId>
-            <version>${revision}</version>
+            <artifactId>spring-partner</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
