--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stellariver.milky</groupId>
-    <artifactId>client-base</artifactId>
+    <artifactId>common-base</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
