--- a/spring-partner/pom.xml
+++ b/spring-partner/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.stellariver.milky</groupId>
     <artifactId>spring-partner</artifactId>
 
     <properties>
