--- a/milky-spring-boot-starter/pom.xml
+++ b/milky-spring-boot-starter/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.stellariver.milky</groupId>
             <artifactId>spring-partner</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
