--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-milky.domainPackage=com.stellariver.milky.example.domain
 milky.enableMq=false
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/crashcourse
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
