--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,11 @@
 
     <groupId>com.stellariver</groupId>
     <artifactId>milky</artifactId>
+
     <packaging>pom</packaging>
+
     <version>${revision}</version>
+
     <modules>
         <module>common-base</module>
         <module>common-tool</module>
@@ -17,7 +20,7 @@
     </modules>
 
     <properties>
-        <revision>1.0.0-SNAPSHOT</revision>
+        <revision>1.0.0</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
