--- a/student-management/pom.xml
+++ b/student-management/pom.xml
@@ -47,7 +47,7 @@
             <dependency>
                 <groupId>com.stellariver</groupId>
                 <artifactId>milky-spring-boot-starter</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
