--- a/student-management/basic/pom.xml
+++ b/student-management/basic/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.stellariver.student.management</groupId>
-    <artifactId>common</artifactId>
+    <groupId>com.stellariver.student.managemen</groupId>
+    <artifactId>basic</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
