--- a/student-management/infrastructure/pom.xml
+++ b/student-management/infrastructure/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stellariver.student.management</groupId>
-    <artifactId>common</artifactId>
+    <artifactId>infrastructure</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
