--- a/milky-spring-boot-starter/pom.xml
+++ b/milky-spring-boot-starter/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.stellariver.milky</groupId>
     <artifactId>milky-spring-boot-starter</artifactId>
 
     <properties>
