--- a/student-management/basic/pom.xml
+++ b/student-management/basic/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.stellariver.student.managemen</groupId>
+    <groupId>com.stellariver.student.management</groupId>
     <artifactId>basic</artifactId>
 
     <properties>
@@ -17,4 +17,14 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.stellariver.milky</groupId>
+            <artifactId>milky-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.stellariver.student.management</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
