--- a/student-management/common/pom.xml
+++ b/student-management/common/pom.xml
@@ -17,4 +17,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.stellariver.milky</groupId>
+            <artifactId>common-base</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
