--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,11 @@
         <module>domain-support</module>
         <module>milky-spring-boot-starter</module>
         <module>spring-partner</module>
+        <module>milky-dependencies</module>
     </modules>
 
     <properties>
-        <revision>0.0.1</revision>
+        <revision>0.0.2-SNAPSHOT</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <maven.deploy.skip>true</maven.deploy.skip>
