--- a/student-management/pom.xml
+++ b/student-management/pom.xml
@@ -27,7 +27,7 @@
         <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <java.version>8</java.version>
-        <milky.version>0.0.1</milky.version>
+        <milky.version>0.0.2-SNAPSHOT</milky.version>
     </properties>
 
     <dependencyManagement>
@@ -76,28 +76,10 @@
             </dependency>
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
-                <artifactId>spring-partner</artifactId>
-                <version>${milky.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.stellariver.milky</groupId>
-                <artifactId>common-base</artifactId>
-                <version>${milky.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.stellariver.milky</groupId>
-                <artifactId>domain-support</artifactId>
-                <version>${milky.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.stellariver.milky</groupId>
-                <artifactId>common-tool</artifactId>
-                <version>${milky.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.stellariver.milky</groupId>
-                <artifactId>milky-spring-boot-starter</artifactId>
-                <version>${milky.version}</version>
+                <artifactId>milky-dependencies</artifactId>
+                <version>0.0.2-SNAPSHOT</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
