change some details

--- a/spring-partner/pom.xml
+++ b/spring-partner/pom.xml
@@ -27,6 +27,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.stellariver.milky</groupId>
+            <artifactId>common-tool</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
