--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -50,6 +50,10 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
