--- a/milky-spring-boot-starter/pom.xml
+++ b/milky-spring-boot-starter/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
