--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                 <artifactId>spring-boot-dependencies</artifactId>
                 <scope>import</scope>
                 <type>pom</type>
-                <version>2.6.2</version>
+                <version>2.3.9.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
