add standard query interface

--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -54,6 +54,10 @@
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
