adjust message identifier with aggregationId

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
     </modules>
 
     <properties>
-        <revision>0.0.2-SNAPSHOT</revision>
+        <!--if you need change this project version, you need change this number and the -->
+        <!--same properties in milky-dependencies/pom.xml-->
+        <revision>0.0.5-SNAPSHOT</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <maven.deploy.skip>true</maven.deploy.skip>
