--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>milky</artifactId>
         <groupId>com.stellariver</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,7 +25,6 @@
         <dependency>
             <groupId>com.stellariver.milky</groupId>
             <artifactId>milky-spring-boot-starter</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
