--- a/milky-dependencies/pom.xml
+++ b/milky-dependencies/pom.xml
@@ -2,11 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>milky</artifactId>
         <groupId>com.stellariver</groupId>
         <version>${revision}</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stellariver.milky</groupId>
@@ -15,6 +17,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <revision>0.0.5-SNAPSHOT</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
@@ -48,5 +51,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
