adjust message identifier with aggregationId

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-partner</module>
         <module>milky-dependencies</module>
         <module>demo</module>
+        <module>infrastructure-base</module>
     </modules>
 
     <properties>
@@ -84,6 +85,27 @@
                 <groupId>cglib</groupId>
                 <artifactId>cglib-nodep</artifactId>
                 <version>3.3.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.aliyun.schedulerx</groupId>
+                <artifactId>schedulerx2-worker</artifactId>
+                <version>1.3.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>4.9.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.openservices</groupId>
+                <artifactId>tablestore</artifactId>
+                <version>5.13.9</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.csp</groupId>
+                <artifactId>sentinel-core</artifactId>
+                <version>1.8.4</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
